--- a/public/css/admin/minorista.css
+++ b/public/css/admin/minorista.css
@@ -30,26 +30,24 @@ main .Content--page{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 0;
+    padding: 15px 7px;
 }
 main .Content--page .input--Container{
     display: flex;
-    align-items: center;
-    
+    align-items: center; 
 }
 main .Content--page .input--Container input{
-    width: 280px;
-    padding: 7px 10px;
-    font-size: 1.1em;
-    font-weight: 500;
-    border-radius: 5px;
+    width: 230px;
+    padding: 7px 8px;
+    width: 300px;
     border: 2px solid #aaa;
     outline: none;
+    border-radius: 15px;
 }
 main .Content--page .input--Container img{
-    width: 30px;
+    width: 25px;
     position: relative;
-    left: -45px;
+    left: -35px;
     cursor: pointer;
 }
 main .Content--page .Minorista--Mayorista{
@@ -96,7 +94,7 @@ main .Content--page .Minorista--Mayorista span{
 }
 main .Table--Container{
     margin-top: 5px;
-    padding: 10px;
+    padding: 5px;
 }
 main .Table--Container table{
     border: 2px solid #aaa;
@@ -107,24 +105,33 @@ main .Table--Container table{
     display: block;
     overflow-y: auto;
 }
+main .Table--Container table::-webkit-scrollbar{
+    background-color: #aaa;
+    border-radius: 15px;
+    width: 10px;
+}
+main .Table--Container table::-webkit-scrollbar-thumb{
+    background-color: var(--ColorNavigatorBar);
+    border-radius: 20px;
+}
 main .Table--Container table caption{
     border-radius: 5px;
     border-bottom: none;
     padding: 10px;
-    font-size: 1.3em;
+    font-size: 1.1em;
     font-weight: 700;
     letter-spacing: 1px;
     text-align: center;
 }
 main .Table--Container th{
-    padding: 5px 25px;
+    padding: 5px 35px;
     border-top: 1px solid #aaa;
     border-bottom: 1px solid #aaa;
 }
 main .Table--Container td{
     text-align: center;
     padding: 5px 15px;
-    font-size: 1.1em;
+    font-size: 0.9em;
 }
 main .Table--Container tbody tr{
     transition: .1s linear;
@@ -132,4 +139,5 @@ main .Table--Container tbody tr{
 main .Table--Container tbody tr:hover{
     background-color: var(--ColorNavigatorBar);
     color: var(--PrimaryColor);
+    cursor: pointer;
 }
