--- a/src/layouts/Landing/product/index.html
+++ b/src/layouts/Landing/product/index.html
@@ -127,7 +127,7 @@
                 </div>
                 <div style="flex-direction: column; display: flex; gap: 3vmin;">
                     <details>
-                        <summary>FICHA TECNICA</summary>
+                        <summary>FICHA TÉCNICA</summary>
                         ajshdkjasbdkjahksjdhakjszhdkasjdkajbskdjahisdhaiushdiuahsiudhaiushduiahsudhauhsdddddddddddddddddddddddddddddddddddhdudhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
                     </details>
                     <div id="units">
